# Random-Book-Excerpts

./: .gitignore  README.md  engine_.py  main.py  pyproject.toml  random_exc.py  requirements.txt  settings.py  webhook.py
static/styles/: 403.css
template/: excerpt-v2.html  excerpt.html  index.html  test2.html  test3.html  test4.html  tester.html
template/errorhandles/: 403.html  404.html  410.html  500.html
template/pagefiles/: excerpt-v2.html  excerpt_tester.html  index.html
