[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "engine"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
flask = "^1.1"
flask-restful = "^0.3.7"
lxml = "^4.4"
python = "^3.8"
[tool.poetry.dev-dependencies]
