[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Ian Terrince Davis <ian.t.davis@outlook.com>"]
description = "Simple Web App that returns random book excerpts; html webscraping, Flask Development with Dynamic HTML, WGSI Production Server, Threading"
name = "engine"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
flask = "^2.3"
lxml = "^4.9"
python = "^3.8"
gevent = "^23.9.1"
requests = "^2.31.0"
pusher = "^3.0.0"
httpagentparser = "^1.9.0"
python-dotenv = "^0.14.0"
[tool.poetry.dev-dependencies]
